<resources>
    <string name="app_name">ProvigosDroid</string>
    <string name="privacy_policy">Politika privatnosti…</string>
    <string name="switch_pref1_key">health_connect_integration</string>
    <string name="switch_pref1_title">Health Connect</string>
    <string name="switch_pref2_key">github_integration</string>
    <string name="switch_pref2_title">GitHub</string>
    <string name="switch_pref3_key">spotify_integration</string>
    <string name="switch_pref3_title">Spotify</string>
    <string name="switch_pref4_key">custom_items</string>
    <string name="switch_pref4_title">Custom items</string>
    <string name="switch_pref5_key">sign_out</string>
    <string name="switch_pref5_title">Sign Out</string>
    <string name="pp_checkbox">I understand and accept Provigos data usage</string>
    <string name="cancel">Cancel</string>
    <string name="continyu">Continue</string>
    <string name="app_title">PROVIGOS</string>
    <string name="app_motto">the future of data aggregation now</string>
    <string name="provigos_title">login@PROVIGOS</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_to_register">Not yet registered? Sign-up now!</string>
    <string name="remember_me">Remember me</string>
    <string name="steps_today">Steps</string>
    <string name="num_of_steps">%1$s/6000</string>
    <string name="recent_weight">Weight</string>
    <string name="num_of_weight">%1$s %2$s</string>
    <string name="heart_rate">Heart rate</string>
    <string name="heart_bpm">%1$s BPM</string>
    <string name="active_calories">Calories burned today</string>
    <string name="calories_val">%1$s cal</string>
    <string name="body_fat">Body fat</string>
    <string name="lean_body_mass">Lean body mass</string>
    <string name="body_fat_val">%1$s %2$s</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="height">Height</string>
    <string name="body_temperature">Body temperature</string>
    <string name="oxygen_saturation">Oxygen saturation</string>
    <string name="blood_glucose">Blood glucose</string>
    <string name="respiratory_rate">Respiratory rate</string>
    <string name="datetime">Date \&amp; Time</string>
    <string name="today">Today</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="save">Save</string>
    <string name="pictures">pictures</string>
    <string name="contdesc">contdesc</string>
    <string name="total_github_commits">Total commits</string>
    <string name="daily_github_commits">Commits today</string>
    <string name="spotify_genre">Most popular genre</string>
    <string name="spotify_popularity">Average artist popularity</string>
    <string name="tracked_items_through_github_integration">Tracked items through Github integration</string>
    <string name="tracked_items_through_spotify_integration">Tracked items through Spotify integration</string>
    <string name="tracked_items_hint">You can always manage your integrations by going to settings!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque odio lorem, lobortis et elit at, volutpat interdum ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec porta molestie justo nec venenatis. Donec pretium orci ac mollis pulvinar. Curabitur iaculis tincidunt neque, sit amet interdum turpis sodales feugiat. Fusce non turpis sit amet eros interdum congue eu vel diam. Fusce efficitur vitae sem quis imperdiet. Aliquam et feugiat nisi.

Duis sagittis consequat est, sed luctus mauris. Vivamus velit felis, scelerisque sit amet nibh quis, viverra feugiat neque. Praesent varius lacus id rhoncus volutpat. Ut at elit eget risus ultricies malesuada. Nam sit amet nunc suscipit, convallis lorem quis, pharetra tellus. Ut mattis dapibus justo at euismod. Praesent vitae lacus at neque pulvinar sollicitudin. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent a tellus magna.

Sed in ex quis elit bibendum vestibulum. Phasellus ante nulla, tempor at lorem in, bibendum pellentesque nisi. Curabitur non dignissim sapien, eu elementum orci. Nunc convallis facilisis ipsum, eu hendrerit risus ornare vitae. Maecenas a sagittis massa, ac aliquet erat. Donec ac odio vitae urna lacinia viverra a id nisi. Nullam vulputate enim id nibh aliquet, sit amet gravida purus vulputate. Vestibulum sit amet condimentum velit. Nullam lacinia molestie faucibus. Donec at enim eros. Sed consectetur est a ipsum viverra finibus.

Mauris at nibh libero. Aliquam scelerisque enim sit amet cursus semper. Pellentesque turpis ipsum, tincidunt ut nunc vitae, bibendum dictum nisi. Donec quis accumsan mauris. Nam porta augue quis magna commodo, in consequat nunc rutrum. Praesent eleifend erat nisi, eget volutpat mauris fermentum et. Maecenas et ultricies lectus, molestie molestie est. Quisque ut purus urna.

Nullam placerat at justo sed scelerisque. Aliquam aliquam ornare mi ut fringilla. Aenean sollicitudin neque ante, eget cursus ante tempus sit amet. Proin vehicula in dui vitae gravida. Aenean venenatis enim pulvinar, fringilla mauris nec, fringilla urna. Vestibulum tincidunt mi sed egestas egestas. Duis gravida risus non nisi venenatis tincidunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque odio lorem, lobortis et elit at, volutpat interdum ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec porta molestie justo nec venenatis. Donec pretium orci ac mollis pulvinar. Curabitur iaculis tincidunt neque, sit amet interdum turpis sodales feugiat. Fusce non turpis sit amet eros interdum congue eu vel diam. Fusce efficitur vitae sem quis imperdiet. Aliquam et feugiat nisi.

Duis sagittis consequat est, sed luctus mauris. Vivamus velit felis, scelerisque sit amet nibh quis, viverra feugiat neque. Praesent varius lacus id rhoncus volutpat. Ut at elit eget risus ultricies malesuada. Nam sit amet nunc suscipit, convallis lorem quis, pharetra tellus. Ut mattis dapibus justo at euismod. Praesent vitae lacus at neque pulvinar sollicitudin. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent a tellus magna.

Sed in ex quis elit bibendum vestibulum. Phasellus ante nulla, tempor at lorem in, bibendum pellentesque nisi. Curabitur non dignissim sapien, eu elementum orci. Nunc convallis facilisis ipsum, eu hendrerit risus ornare vitae. Maecenas a sagittis massa, ac aliquet erat. Donec ac odio vitae urna lacinia viverra a id nisi. Nullam vulputate enim id nibh aliquet, sit amet gravida purus vulputate. Vestibulum sit amet condimentum velit. Nullam lacinia molestie faucibus. Donec at enim eros. Sed consectetur est a ipsum viverra finibus.

Mauris at nibh libero. Aliquam scelerisque enim sit amet cursus semper. Pellentesque turpis ipsum, tincidunt ut nunc vitae, bibendum dictum nisi. Donec quis accumsan mauris. Nam porta augue quis magna commodo, in consequat nunc rutrum. Praesent eleifend erat nisi, eget volutpat mauris fermentum et. Maecenas et ultricies lectus, molestie molestie est. Quisque ut purus urna.

Nullam placerat at justo sed scelerisque. Aliquam aliquam ornare mi ut fringilla. Aenean sollicitudin neque ante, eget cursus ante tempus sit amet. Proin vehicula in dui vitae gravida. Aenean venenatis enim pulvinar, fringilla mauris nec, fringilla urna. Vestibulum tincidunt mi sed egestas egestas. Duis gravida risus non nisi venenatis tincidunt.</string>
    <string name="privacy_policy_heading">Privacy Policy</string>
    <string name="introductory_title">Hey there!</string>
    <string name="introductory_body">Thank you for using Provigos. To start things going, we suggest you go to the SETTINGS tab and choose which data sources (or as we like to call them, integrations) you want us to track. You can always opt-in or out anytime you want from a specific data source. After opting-in, you can choose which data you would like to track from the specific data source. Some items can be updated from inside Provigos by clicking on the item\'s data card in the DASHBOARD. You can also check weekly charts and more info by going to the CHARTBOARD tab.
        </string>
    <string name="introductory_finish">Happy aggregating!</string>
    <string name="got_it">Got it</string>
    <string name="nothing_to_see_here">Nothing to see here for now.</string>
    <string name="choose_integrations"> Choose integrations in the SETTINGS tab so we can get started.</string>
    <string name="name_your_custom_item">Name your custom item</string>
    <string name="give_your_custom_item_a_label">Give your custom item a label</string>
    <string name="in_what_units_is_it_measured">In what units is it measured?</string>
    <string name="what_will_it_be_shown_as">What will it be shown as?</string>
    <string name="how_to_refer_to_it">How to refer to it?</string>
    <string name="units">Units:</string>
    <string name="custom_label">Label:</string>
    <string name="name">Name:</string>
    <string name="how_to_measure_it">How to measure it?</string>
    <string name="give_us_a_starting_value">Give us a starting value</string>
    <string name="custom_disclaimer">Disclaimer: Custom data works only for tracking data on a daily basis.</string>
    <string name="mit_license"><![CDATA[
         MIT License

        Copyright 2025 Provigos


 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:

 The above copyright notice and this permission notice shall be included in all
 copies or substantial portions of the Software.

 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.]]>
    </string>
    <string name="new_entry">New entry</string>
</resources>