<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Integrations">
        <Preference
            android:id="@+id/switch_preference_hc"
            android:key="@string/switch_pref1_key"
            android:title="@string/switch_pref1_title"
            android:icon="@drawable/health_connect"
            />
        <Preference
            android:id="@+id/github_integration"
            android:key="@string/switch_pref2_key"
            android:title="@string/switch_pref2_title"
            android:icon="@drawable/github"
            />
        <Preference
            android:id="@+id/spotify_integration"
            android:key="@string/switch_pref3_key"
            android:title="@string/switch_pref3_title"
            android:icon="@drawable/spotify"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="Account">
        <Preference
            android:id="@+id/custom_items"
            android:key="@string/switch_pref4_key"
            android:title="@string/switch_pref4_title"
            android:summary="Manage your customized trackable items"/>
        <Preference
            android:id="@+id/sign_out"
            android:key="@string/switch_pref5_key"
            android:title="@string/switch_pref5_title"
            android:summary="Remove your Provigos credentials"/>
    </PreferenceCategory>

</PreferenceScreen>


