<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="false">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/introductory"
        android:padding="16dp"
        android:background="@color/mat">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="50dp">

            <TextView
                android:id="@+id/introTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introductory_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/introBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introductory_body"
                android:textSize="16sp"
                android:gravity="start|center_vertical"
                android:justificationMode="inter_character"
                android:layout_marginBottom="32dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/introductory_finish"
                android:layout_marginBottom="32dp"/>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/got_it"
                android:layout_gravity="center"/>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>