<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:viewBindingIgnore="false">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_entry"
        android:textColor="@color/teal1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barChart"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:id="@+id/title"/>

    <TextView
        android:id="@+id/datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datetime"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <TextView
        android:id="@+id/input_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/input_time"
        app:layout_constraintTop_toTopOf="@id/datetime"/>

    <TextView
        android:id="@+id/input_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/datetime"/>

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datetime"/>

    <TextView
        android:id="@+id/input_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"/>

    <TextView
        android:id="@+id/input_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"/>

    <NumberPicker
        android:id="@+id/input_number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/extra_sep"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <TextView
        android:id="@+id/extra_sep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@id/input_number_picker"
        app:layout_constraintEnd_toStartOf="@id/input_number_picker2"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintBottom_toTopOf="@id/separator1"
        android:visibility="gone"
        tools:ignore="HardcodedText"/>

    <NumberPicker
        android:id="@+id/input_number_picker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="65dp"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintStart_toEndOf="@id/extra_sep"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <View
        android:id="@+id/separator1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_number_picker"/>

    <TextView
        android:id="@+id/input_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="24sp"
        android:textColor="@color/teal1"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/separator1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>